# iced_game_collection

./: .gitignore  Cargo.toml  README.md
src/: database.rs  database_with_polo.rs  emulator_runner.rs  error.rs  files.rs  main.rs  model.rs  screen.rs  title_bar.rs
src/model/: collection_file.rs  mod.rs  model.rs
src/repository/: mock_repository.rs  mod.rs  repository.rs
src/screen/: add_emulator.rs  add_game.rs  add_game_main.rs  add_game_screen.rs  add_release.rs  add_release_main.rs  add_release_screen.rs  add_system.rs  error.rs  game_details.rs  games.rs  games_main.rs  games_screen.rs  home.rs  manage_emulators.rs  manage_games.rs  manage_systems.rs  settings_main.rs  settings_screen.rs  view_game.rs  view_game_main.rs  view_game_screen.rs  view_image.rs  view_release.rs
src/screen/add_game_screen/: add_game_main_screen.rs  add_release_screen.rs  manage_releases_screen.rs  sub_screen.rs  sub_screen2.rs
src/screen/add_release_screen/: add_release_main_screen.rs  manage_games.rs  manage_games_screen.rs  manage_systems_screen.rs
src/screen/games_screen/: games_main_screen.rs
src/screen/settings_screen/: settings_main_screen.rs  settings_widget.rs
src/tabs/: games_tab.rs  home_tab.rs  mod.rs  settings_tab.rs  tabs_controller.rs
src/tabs/widgets/: games_list_widget.rs  image_viewer_widget.rs  mod.rs  release_details_widget.rs  releases_list_widget.rs
src/util/: directory.rs  file_path_builder.rs  image.rs  mod.rs
src/view_model/: list_models.rs  mod.rs  release_view_model.rs
