[package]
name = "iced_game_collection"
version = "0.1.0"
edition = "2021"

[dependencies]
async-process = "2.3.0"
async-std = "1.13.0"
bson = "2.13.0"
iced = {version = "0.13", features = ["image"]}
image = "0.25.5"
lazy_static = "1.5.0"
polodb_core = "5.1.3"
rfd = "0.15.0"
serde =  {version="1.0.210", features = ["derive"]}
serde_json = {version="1.0.128"}
sha1 = "0.10.6"
uuid = {version="1.11.0", features = ["v4"]}
zip = "2.2.0"
